zavrsena sekcija sa ukusima

--- a/index.html
+++ b/index.html
@@ -20,5 +20,32 @@
 <p>Naša je želja da proizvedemo ne samo ukus, već da prenesemo emociju sa kojom će naši kupci moći trajno da se vežu i da izazovemo onu vrstu zadovoljstva koja ljude čini srećnim i ovaj svet lepšim.</p>
 </div>
     </section>
+
+<section id="ukusi" class = "ukusi-section">
+    <h2>Naši ukusi</h2>
+<div class="ukusi-grid">
+
+    <div class="ukus-box">
+    <img src="https://i.pinimg.com/736x/54/62/ea/5462ea031fb21b34b2407873ee1fc88b.jpg">
+    <h3>Čokolada</h3>
+</div>
+
+<div class="ukus-box">
+    <img src="https://i.pinimg.com/736x/75/73/72/75737278d75a660df9616af3c8cb81be.jpg" alt="ukus vanila">
+    <h3>Vanila</h3>
+</div>
+
+<div class="ukus-box">
+    <img src="https://i.pinimg.com/736x/b6/dd/3c/b6dd3cd712f8e06cad88dea10c23beb1.jpg" alt="ukus Jagoda">
+    <h3>Jagoda</h3>
+</div>
+
+<div class="ukus-box">
+    <img src="https://i.pinimg.com/736x/cd/d4/93/cdd4933957b91568ffc34dc046e7f3db.jpg" alt="ukus Lešnik">
+    <h3>Lešnik</h3>
+</div>
+</div>
+</section>
+
 </body>
 </html>
