gotova sekcija novi proizvod

--- a/index.html
+++ b/index.html
@@ -47,5 +47,26 @@
 </div>
 </section>
 
+<section class="best-seller-section">
+    <h2>Naš najprodavaniji proizvod</h2>
+    <div class="best-seller-content">
+
+        <img src="images/sladoledtorta-removebg-preview.png" alt="sarena torta sa sladoledom">
+        <h3>Sladoled torta</h3>
+        <p>Neodoljiva sladoled torta koja osvaja na prvi zalogaj.</p>
+        <p class="cena"><strong>Cena: 2490 RSD</strong></p>
+        <div class="stiker">NOVO</div>
+        
+        <ul class="nutritivne-vrednosti">
+            <li>Kalorije: 587kcal</li>
+            <li>Proteini: 2g</li>
+            <li>Ugljeni hidrati: 56g</li>
+            <li>Masti: 18g</li>
+        </ul>
+        <p class = "alergeni"><strong>Alergeni:</strong> sadrži mleko, orašaste plodove i jaja.</p>
+
+    </div>
+</section>
+
 </body>
 </html>
