gotova sekcija o nama

--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
 
     </div>
 </section>
+<section class="o-nama">
+    <div class="o-nama-slika"><img src="https://i.pinimg.com/736x/4e/1d/21/4e1d213cf045d52c1e645d379b4d1841.jpg" alt="nas tim"></div>
+    <div class="o-nama-sadrzaj"> <h2>O nama</h2>
+        <p>Naša prodavnica sladoleda je mesto gde se ljubav prema sladoledu susreće sa vrhunskim sastojcima.</p>
+        <br>
+        <p>Posetite nas i otkrijte čaroliju sladoleda!</p>
+    <br>
+<p>Naša prodavnica sladoleda postoji iz ljubavi prema autentičnim ukusima i osvežavajućim trenucima sreće. Svakodnevno pripremamo sveže sladolede od najkvalitetnijih sastojaka, bez veštačkih dodataka. Bilo da volite klasične ukuse ili želite da probate nešto novo, kod nas vas uvek čeka savršena kugla sladoleda!</p>
+<br>
+<p>Mi smo više od obične prodavnice sladoleda – mi stvaramo trenutke radosti! Naša priča je počela iz želje da ponudimo sladoled koji ne samo da osvežava, već i budi uspomene. Svaki naš ukus pažljivo je biran i pripreman sa ljubavlju, koristeći samo prirodne sastojke, sveže voće i vrhunske mlečne proizvode.</p></div>
+   
+    
+</section>
 
 </body>
 </html>
