zavrsena pocetna stranica

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/98033dd5a2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -77,8 +78,72 @@
 <p>Naša prodavnica sladoleda postoji iz ljubavi prema autentičnim ukusima i osvežavajućim trenucima sreće. Svakodnevno pripremamo sveže sladolede od najkvalitetnijih sastojaka, bez veštačkih dodataka. Bilo da volite klasične ukuse ili želite da probate nešto novo, kod nas vas uvek čeka savršena kugla sladoleda!</p>
 <br>
 <p>Mi smo više od obične prodavnice sladoleda – mi stvaramo trenutke radosti! Naša priča je počela iz želje da ponudimo sladoled koji ne samo da osvežava, već i budi uspomene. Svaki naš ukus pažljivo je biran i pripreman sa ljubavlju, koristeći samo prirodne sastojke, sveže voće i vrhunske mlečne proizvode.</p></div>
-   
     
+</section>
+
+<section class="preporuke">
+    <h2>Šta kažu naši klijenti</h2>
+    <div class="preporuke-grid">
+        <div class="preporuka">
+            <div class="zvezdice"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+            <p>
+                "Najbolji sladoled koji sam ikada probala! Ukus maline je kao da jedem pravo sveže voće, a tekstura je savršeno kremasta. Svaki put kada svratim, otkrijem novi omiljeni ukus. Ambijent je divan, a osoblje uvek nasmejano i ljubazno. Preporučujem svima koji žele pravi užitak!"
+            </p>
+            <div class="preporuka-footer">
+                <img src="https://i.pinimg.com/736x/0f/66/48/0f6648d9c9b2dc0d64ef1646eb2b3f07.jpg" alt="slika korisnika">
+                <p>Ana M.</p>
+            </div>
+
+            </div>
+            <div class="preporuka">
+                <div class="zvezdice"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
+                <p>"Sladoled je jednostavno fantastičan! Pistaći su pun pogodak – intenzivan, prirodan ukus, bez previše šećera. Oseća se da je sve rađeno s pažnjom. Moje dete obožava čokoladu sa komadićima keksa, a meni je limun favorit za osveženje. Dolazimo bar jednom nedeljno!"</p>
+                <div class="preporuka-footer">
+                    <img src="https://i.pinimg.com/736x/0f/66/48/0f6648d9c9b2dc0d64ef1646eb2b3f07.jpg" alt="slika korisnika">
+                    <p>Marko N.</p>
+                </div>
+            </div>
+    </div>
+</section>
+
+<section class="zasto">
+    <h2>Zašto da odaberete baš naš sladoled</h2>
+    <div class="zasto-grid">
+        <div class="razlozi">
+            <div class="razlog">
+                <div class="kolona1">
+            <i class="fa-solid fa-check"></i>
+        </div>
+        <div class="kolona2">
+            <h3>Prirodni sastojci</h3>
+<p>Naš sladoled pravimo isključivo od prirodnih sastojaka, bez veštačkih boja, aroma i konzervansa.</p>
+</div>
+</div>
+<div class="razlog">
+    <div class="kolona1">
+<i class="fa-solid fa-check"></i>
+</div>
+<div class="kolona2">
+<h3>Domaća receptura</h3>
+<p>Svaki ukus je pažljivo razvijen po našoj jedinstvenoj recepturi, koja garantuje autentičan i bogat ukus.</p>
+</div>
+</div>
+
+<div class="razlog">
+    <div class="kolona1">
+<i class="fa-solid fa-check"></i>
+</div>
+<div class="kolona2">
+<h3>Širok izbor ukusa</h3>
+<p>Od klasične vanile do neobičnih sezonskih kombinacija – za svakoga se pronađe nešto posebno.</p>
+</div>
+</div>
+
+        </div>
+        <div class="slika">
+            <img src="images/ice-cream-cone-gelato-four-scoops-hd-png-704081694862759jmgvdkoch9-removebg-preview.png" alt="">
+        </div>
+    </div>
 </section>
 
 </body>
