--- a/korpa.html
+++ b/korpa.html
@@ -25,20 +25,23 @@
                 <th>Cena</th>
                 <th>Kolicina</th>
                 <th>Ukupno</th>
+                <th>Obrisi</th>
             </tr>
             <tr>
                 <td>Cokolada</td>
                 <td><img src="https://i.pinimg.com/736x/54/62/ea/5462ea031fb21b34b2407873ee1fc88b.jpg" alt=""></td>
                 <td>200din</td>
-                <td>3</td>
+                <td><input type="number" name="" id="" min="0" value="1"></td>
                 <td>600 din</td>
+                <td><button class="obrisi"><i class="fa-solid fa-trash"></i></button></td>
             </tr>
             <tr>
                 <td>Karamela</td>
                 <td><img src="https://i.pinimg.com/736x/73/49/c0/7349c02132a9b9b3a7217c3cff1de69a.jpg" alt=""></td>
                 <td>350 din</td>
-                <td>2</td>
+                <td><input type="number" name="" id="" min="0" value="1"></td>
                 <td>700 din</td>
+                <td><button class="obrisi"><i class="fa-solid fa-trash"></i></button></td>
         </tr>
         </div>
         </table>
