--- a/registracija.html
+++ b/registracija.html
@@ -9,9 +9,25 @@
     
     <title>Registracija</title>
     <link rel="stylesheet" href="css/registracija.css">
+    <link rel="stylesheet" href="css/nav.css">
 
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="logo">
+<a href="index.html"><img class="logoslika" src="images/logo.jpg.png" alt="logo"></a>
+        </div>
+<ul class="nav-links">
+    <li><a href="index.html">Pocetna</a></li>
+    <li><a href="ponuda.html">Ponuda</a></li>
+    <li><a href="korpa.html">Korpa</a></li>
+    <li><a href="kontakt.html">Kontakt</a></li>
+    <li><a href="registracija.html">Registruj se</a></li>
+    <li><a href="login.html">Prijavi se</a></li>
+</ul>
+    </nav>
+    </header>
     <section class="registracija-section">
 
         <h2>Kreiraj nalog</h2>
