--- a/index.html
+++ b/index.html
@@ -13,8 +13,28 @@
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/98033dd5a2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
+
+
+    <header>
+        <nav>
+            <div class="logo">
+<a href="index.html"><img class="logoslika" src="images/logo.jpg.png" alt="logo"></a>
+        </div>
+<ul class="nav-links">
+    <li><a href="index.html">Pocetna</a></li>
+    <li><a href="ponuda.html">Ponuda</a></li>
+    <li><a href="korpa.html">Korpa</a></li>
+    <li><a href="kontakt.html">Kontakt</a></li>
+    <li><a href="registracija.html">Registruj se</a></li>
+    <li><a href="login.html">Prijavi se</a></li>
+</ul>
+    </nav>
+    </header>
+
+
     <section id="hero">
 <div class = "hero-content">
 <h1>Najbolji sladoledi u Beogradu</h1>
