--- a/login.html
+++ b/login.html
@@ -8,9 +8,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/registracija.css">
+        <link rel="stylesheet" href="css/nav.css">
+
 
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="logo">
+<a href="index.html"><img class="logoslika" src="images/logo.jpg.png" alt="logo"></a>
+        </div>
+<ul class="nav-links">
+    <li><a href="index.html">Pocetna</a></li>
+    <li><a href="ponuda.html">Ponuda</a></li>
+    <li><a href="korpa.html">Korpa</a></li>
+    <li><a href="kontakt.html">Kontakt</a></li>
+    <li><a href="registracija.html">Registruj se</a></li>
+    <li><a href="login.html">Prijavi se</a></li>
+</ul>
+    </nav>
+    </header>
     <section class="registracija-section">
 
         <h2>Prijavi se</h2>
