--- a/korpa.html
+++ b/korpa.html
@@ -12,6 +12,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/98033dd5a2.js" crossorigin="anonymous"></script>
+        <link rel="icon" type="image/png" href="images/logo.jpg.png">
+
 <link rel="stylesheet" href="css/korpa.css">
     <link rel="stylesheet" href="css/nav.css">
 
