--- a/login.html
+++ b/login.html
@@ -7,6 +7,8 @@
     <script src="https://kit.fontawesome.com/98033dd5a2.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+           <link rel="icon" type="image/png" href="images/logo.jpg.png">
+
     <link rel="stylesheet" href="css/registracija.css">
         <link rel="stylesheet" href="css/nav.css">
 
