--- a/kontakt.html
+++ b/kontakt.html
@@ -19,12 +19,15 @@
 
 </head>
 <body>
-    <header>
+     <header>
         <nav>
             <div class="logo">
 <a href="index.html"><img class="logoslika" src="images/logo.jpg.png" alt="logo"></a>
         </div>
-<ul class="nav-links">
+        
+        <label for="menu-toggle" class="hamburger">&#9776;</label>
+<input type="checkbox" id="menu-toggle">
+        <ul class="nav-links">
     <li><a href="index.html">Pocetna</a></li>
     <li><a href="ponuda.html">Ponuda</a></li>
     <li><a href="korpa.html">Korpa</a></li>
